# AI-Analyst

./: .env  .gitignore  .pre-commit-config.yaml  README.md  agent_logic.py  browser_test.xlsx  env_utils.py  generate_excel.py  main.py  pyproject.toml  test_sheets.py
.github/: copilot-instructions.md
backend/: __init__.py
backend/fetchers/: __init__.py
backend/processors/: __init__.py  agent.py
backend/shared/: __init__.py  categories.py
backend/storers/: __init__.py  sheets.py
finance-proxy/: .env.example  README.md  categories.py  env.yaml  ingest.py  ledger.py  main.py  pyproject.toml
finance-proxy/core/: ingest.py  ledger.py
finance_proxy/: README.md  env.yaml  main.py
finance_proxy/core/: agent.py  categories.py  ingest.py  ledger.py  schemas.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: Chat.jsx  Dashboard.jsx  Ingestion.jsx
frontend/src/styles/: global.css
scripts/: __init__.py  deploy_reasoning_engine.py  startup_checks.py
templates/: index.html
tests/: test_agent_logic.py  test_env_utils.py  test_startup_checks.py
