[project]
name = "finance-proxy"
version = "0.1.0"
description = "FastAPI proxy for Lovable.dev to Vertex AI Reasoning Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "google-cloud-aiplatform[agent_engines]>=1.130.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.30.0",
]

[tool.uv]
package = false
