[project]
name = "finance-proxy"
version = "0.1.0"
description = "FastAPI proxy for Lovable.dev to Vertex AI Reasoning Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "google-cloud-aiplatform[agent_engines]>=1.130.0",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.34.0",
    "google-auth-httplib2>=0.2.0",
    "openpyxl>=3.1.5",
    "pypdf>=4.3.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]

[tool.uv]
package = false
